--- a/menu/index.html
+++ b/menu/index.html
@@ -101,16 +101,16 @@
                                 <p>Mozzarella di bufala, pomodorini e basilico</p>
                             </li>
                             <li>
-                                <h3>Zucchine e melanzane fritte<span class="right">4</span></h3>
-                                <p>Zucchine e melanzane fritte impanate con farina di riso</p>
+                                <h3>Verdure Gratinate<span class="right">4</span></h3>
+                                <p>Verdure di stagione gratinate e servite fredde</p>
                             </li>
                             <li>
                                 <h3>Verdure grigliate<span class="right">4,5</span></h3>
                                 <p>Verdure di stagione grigliate con rosmarino</p>
                             </li>
                             <li>
-                                <h3>Pizzette e focacce<span class="right">2,5</span></h3>
-                                <p>Pizzette e focacce all'olio di oliva fatte in casa</p>
+                                <h3>Focacce<span class="right">2,5</span></h3>
+                                <p>Focacce all'olio di oliva fatte in casa</p>
                             </li>
                         </ul>
                     </div>
@@ -143,7 +143,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
-                                <p>180 grammi di ceci, avocado, composta leggermente piccante di verdure e menta, rucola</p>
+                                <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
                             </li>
                         </ul>                      
                     </div>   
@@ -164,7 +164,7 @@
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>Costata da 800 o 1200 grammi. Solo su ordinazione il Martedì, Mercoledì e Giovedì. Chiamare almeno due giorni prima.<br><a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                                <p>Fiorentina da 800 o 1200 grammi. Solo su ordinazione. Chiamare almeno due giorni prima.<br><a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
                                 </p>
                             </li>
                         </ul>                      
@@ -182,7 +182,7 @@
                             </li>
                             <li>
                                 <h3><!-- <a href="http://beerstrot.it/menu/cibo/birramisu.html"> -->Panna Cotta<span class="right">5</span><!-- </a> --></h3>
-                                <p>Classica panna cotta servita con sciroppo d'acero</p>
+                                <p>Panna cotta alla birra servita con sciroppo d'acero</p>
                             </li>
                         </ul>
                     </div>
