--- a/menu/index.html
+++ b/menu/index.html
@@ -101,7 +101,7 @@
                                 <p>Mozzarella di bufala, pomodorini e basilico</p>
                             </li>
                             <li>
-                                <h3>Verdure Gratinate<span class="right">4</span></h3>
+                                <h3>Verdure gratinate<span class="right">4</span></h3>
                                 <p>Verdure di stagione gratinate e servite fredde</p>
                             </li>
                             <li>
