--- a/menu/index.html
+++ b/menu/index.html
@@ -374,7 +374,7 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Rosso Conero<span class="right"> 2,5 | 6</span></a></h3>
+                                <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></a></h3>
                                 <p>Tavignano</p>
                             </li>
                             <li>
