--- a/menu/index.html
+++ b/menu/index.html
@@ -77,6 +77,10 @@
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
+                                <h3>Bufala e pomodorini<span class="right">6</span></h3>
+                                <p>Mozzarella di bufala, pomodorini e basilico</p>
+                            </li>
+                            <li>
                                 <h3>Peperoncini e pancetta<span class="right">4,5</span></h3>    
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
@@ -95,10 +99,6 @@
                             <li>
                                 <h3>Insalata mista<span class="right">4</span></h3>
                                 <p>Verdure di stagione</p>
-                            </li>
-                            <li>
-                                <h3>Bufala e pomodorini<span class="right">6</span></h3>
-                                <p>Mozzarella di bufala, pomodorini e basilico</p>
                             </li>
                             <li>
                                 <h3>Verdure gratinate<span class="right">4</span></h3>
@@ -145,6 +145,14 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
                                 <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
                             </li>
+                            <li>
+                                <h3>Mini Burger<span class="right">6</span></h3>    
+                                <p>100 grammi di manzo</p>
+                            </li>
+                            <li>
+                                <h3>Big Burger<span class="right">14,5</span></h3>    
+                                <p>360 grammi di manzo</p>
+                            </li>
                         </ul>                      
                     </div>   
                 </div>
@@ -188,22 +196,6 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Menù per bambini</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Mini Hamburger con patatine<span class="right">6</span></h3>    
-                                <p>100 grammi di manzo, cheddar</p>
-                            </li>
-                            <li>
-                                <h3>Bocconcini di pollo<span class="right">3,5</span></h3>    
-                                <p>Petto di pollo di prima scelta impanato e fritto</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
         </section>
 <!-- cibo fine -->
 <!-- birra -->
