--- a/menu/index.html
+++ b/menu/index.html
@@ -172,8 +172,7 @@
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>Fiorentina da 800 o 1200 grammi. Solo su ordinazione. Chiamare almeno due giorni prima.<br><a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
-                                </p>
+                                <p>Ffiorentina di manzo da 8 a 13 etti</p>
                             </li>
                         </ul>                      
                     </div>
