--- a/menu/index.html
+++ b/menu/index.html
@@ -497,11 +497,11 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></a></h3>
+                                <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></h3>
                                 <p>Tavignano</p>
                             </li>
                             <li>
-                                <h3>Crimà IGT<span class="right"> 11</span></a></h3>
+                                <h3>Crimà IGT<span class="right"> 11</span></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                         </ul>
@@ -514,11 +514,11 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></a></h3>
+                                <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></h3>
                                 <p>Tavignano</p>
                             </li>
                             <li>
-                                <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></a></h3>
+                                <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></h3>
                                 <p>Bisci</p>
                             </li>
                         </ul>
@@ -531,19 +531,19 @@
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Spumante Conti di Buscareto<span class="right">4 | 14</span></a></h3>
+                                <h3>Spumante Conti di Buscareto<span class="right">4 | 14</span></h3>
                                 <p>Brut</p>
                             </li>
                             <li>
-                                <h3>Mosnel Brut<span class="right">26</span></a></h3>
+                                <h3>Mosnel Brut<span class="right">26</span></h3>
                                 <p>Franciacorta</p>
                             </li>
                             <li>
-                                <h3>Mosnel Pas Dosè<span class="right">28</span></a></h3>
+                                <h3>Mosnel Pas Dosè<span class="right">28</span></h3>
                                 <p>Franciacorta</p>
                             </li>
                             <li>
-                                <h3>Mosnel Saten<span class="right">32</span></a></h3>
+                                <h3>Mosnel Saten<span class="right">32</span></h3>
                                 <p>Franciacorta</p>
                             </li>
                         </ul>
@@ -556,11 +556,11 @@
                         <h2 class="subheader">Passiti</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Nero<span class="right"> 14</span></a></h3>
+                                <h3>Nero<span class="right"> 14</span></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3>Passito di Verdicchio<span class="right">24</span></a></h3>
+                                <h3>Passito di Verdicchio<span class="right">24</span></h3>
                                 <p>Col di Corte 50cl</p>
                             </li>
                         </ul>
@@ -577,15 +577,15 @@
                         <h2 class="subheader">Drinks</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Spritz<span class="right">4,5</span></a></h3>
+                                <h3>Spritz<span class="right">4,5</span></h3>
                                 <p>Campari o Aperol</p>
                             </li>
                             <li>
-                                <h3>Gin Tonic<span class="right">5</span></a></h3>
+                                <h3>Gin Tonic<span class="right">5</span></h3>
                                 <p>Tanquerey</p>
                             </li>
                             <li>
-                                <h3>Gin Tonic<span class="right">8</span></a></h3>
+                                <h3>Gin Tonic<span class="right">8</span></h3>
                                 <p>Hendrick's, Botanist 22, Monkey 47 Sloe, Monkey 47 Dry, Gin de Mare. Acqua tonica con estratti rigorosamente naturali</p>
                             </li>
                         </ul>
@@ -598,31 +598,38 @@
                         <h2 class="subheader">Liquori</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Varnelli<span class="right">2</span></a></h3>
-                                <p>Mistrà, Sibilla, Tonico</p>
-                            </li>
-                            <li>
-                                <h3>Grappa di Lacrima<span class="right">3</span></a></h3>
+                                <h3>Grappa di Lacrima<span class="right">3</span></h3>
                                 <p>Mancinelli</p>
                             </li>
                             <li>
-                                <h3>Grappa Rosso Conero<span class="right">3</span></a></h3>
+                                <h3>Grappa Rosso Conero<span class="right">3</span></h3>
                                 <p>Garofali</p>
                             </li>
                             <li>
-                                <h3>Rhum<span class="right"> 3 | 6</span></a></h3>
+                                <h3>Mistrà, Sibilla, Tonico<span class="right">2</span></h3>
+                                <p>Varnelli</p>
+                            </li>
+                            <li>
+                                <h3>Sambuca<span class="right">2</span></h3>
+                                <p>Molinari</p>
+                            </li>
+                            <li>
+                                <h3>Fernet Branca<span class="right">2</span></h3>
+                            </li>
+                            <li>
+                                <h3>Rhum<span class="right"> 3 | 6</span></h3>
                                 <p>Matusalem 15 Anni</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 5 | 10</span></a></h3>
+                                <h3>Whiskey<span class="right"> 5 | 10</span></h3>
                                 <p>Dad's Hat Rye Finished in Vermouth Barrels</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 4 | 8</span></a></h3>
+                                <h3>Whiskey<span class="right"> 4 | 8</span></h3>
                                 <p>Knob Creek Bourbon 9 Years</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 3 | 6</span></a></h3>
+                                <h3>Whiskey<span class="right"> 3 | 6</span></h3>
                                 <p>Maker's Mark Bourbon</p>
                             </li>
                         </ul>
