--- a/menu/index.html
+++ b/menu/index.html
@@ -77,40 +77,40 @@
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Bufala e pomodorini<span class="right">6</span></h3>
-                                <p>Mozzarella di bufala, pomodorini e basilico</p>
+                                <h3>Bufala e Pomodorini<span class="right">6</span></h3>
+                                <p>mozzarella di bufala, pomodorini e basilico</p>
                             </li>
                             <li>
-                                <h3>Peperoncini e pancetta<span class="right">4,5</span></h3>    
-                                <p>Peperoncini piccanti avvolti nella pancetta</p>
+                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
+                                <p>peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3>Bocconcini di pollo<span class="right">4,5</span></h3>    
-                                <p>Petto di pollo di prima scelta impanato e fritto</p>
+                                <h3>Bocconcini di Pollo<span class="right">4,5</span></h3>    
+                                <p>petto di pollo di prima scelta impanato e fritto</p>
                             </li>
                             <li>
-                                <h3>Patate fritte<span class="right">3,5</span></h3>    
-                                <p>Patate fritte con la buccia tagliate a mano</p>
+                                <h3>Patate Fritte<span class="right">3,5</span></h3>    
+                                <p>patate fritte con la buccia tagliate a rondelle</p>
                             </li>
                             <li>
-                                <h3>Patate arrosto<span class="right">4</span></h3>    
-                                <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
+                                <h3>Patate Arrosto<span class="right">4</span></h3>    
+                                <p>patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
                             </li>
                             <li>
-                                <h3>Insalata mista<span class="right">4</span></h3>
-                                <p>Verdure di stagione</p>
+                                <h3>Insalata Mista<span class="right">4</span></h3>
+                                <p>verdure di stagione</p>
                             </li>
                             <li>
-                                <h3>Verdure gratinate<span class="right">4</span></h3>
-                                <p>Verdure di stagione gratinate e servite fredde</p>
+                                <h3>Verdure Gratinate<span class="right">4</span></h3>
+                                <p>verdure di stagione gratinate e servite fredde</p>
                             </li>
                             <li>
-                                <h3>Verdure grigliate<span class="right">4,5</span></h3>
-                                <p>Verdure di stagione grigliate con rosmarino</p>
+                                <h3>Verdure Grigliate<span class="right">4,5</span></h3>
+                                <p>verdure di stagione grigliate con rosmarino</p>
                             </li>
                             <li>
                                 <h3>Focacce<span class="right">2,5</span></h3>
-                                <p>Focacce all'olio di oliva fatte in casa</p>
+                                <p>focacce all'olio di oliva fatte in casa</p>
                             </li>
                         </ul>
                     </div>
@@ -163,16 +163,16 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in salsa BBQ<span class="right">11,5</span></a></h3>    
-                                <p>Costine di maiale al forno in salsa barbeque servito con patate fritte</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine di Maiale<span class="right">11,5</span></a></h3>    
+                                <p>costine di maiale al forno in salsa barbeque servito con patate fritte</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>Alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
+                                <p>alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>Ffiorentina di manzo da 8 a 13 etti</p>
+                                <p>fiorentina di manzo da 8 a 13 etti</p>
                             </li>
                         </ul>                      
                     </div>
@@ -185,11 +185,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><!-- <a href="http://beerstrot.it/menu/cibo/cheescake.html"> -->Mousse al Cioccolato<span class="right">5</span><!-- </a> --></h3>
-                                <p>Morbida mousse al cioccolato con o senza peperoncino</p>
+                                <p>morbida mousse al cioccolato con o senza peperoncino</p>
                             </li>
                             <li>
                                 <h3><!-- <a href="http://beerstrot.it/menu/cibo/birramisu.html"> -->Panna Cotta<span class="right">5</span><!-- </a> --></h3>
-                                <p>Panna cotta alla birra servita con sciroppo d'acero</p>
+                                <p>panna cotta alla birra servita con sciroppo d'acero</p>
                             </li>
                         </ul>
                     </div>
@@ -531,20 +531,20 @@
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Spumante Conti di Buscareto<span class="right">4 | 14</span></h3>
-                                <p>Brut</p>
+                                <h3>Spumant Brut<span class="right">4 | 14</span></h3>
+                                <p>conti di buscareto</p>
                             </li>
                             <li>
-                                <h3>Mosnel Brut<span class="right">26</span></h3>
-                                <p>Franciacorta</p>
+                                <h3>Franciacorta Brut<span class="right">26</span></h3>
+                                <p>mosnel</p>
                             </li>
                             <li>
-                                <h3>Mosnel Pas Dosè<span class="right">28</span></h3>
-                                <p>Franciacorta</p>
+                                <h3>Franciacorta Pas Dosè<span class="right">28</span></h3>
+                                <p>mosnel</p>
                             </li>
                             <li>
-                                <h3>Mosnel Saten<span class="right">32</span></h3>
-                                <p>Franciacorta</p>
+                                <h3>Franciacorta Saten<span class="right">32</span></h3>
+                                <p>mosnel</p>
                             </li>
                         </ul>
                     </div>
@@ -557,11 +557,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Nero<span class="right"> 14</span></h3>
-                                <p>Conti di Buscareto</p>
+                                <p>conti di buscareto</p>
                             </li>
                             <li>
                                 <h3>Passito di Verdicchio<span class="right">24</span></h3>
-                                <p>Col di Corte 50cl</p>
+                                <p>col di corte 50cl</p>
                             </li>
                         </ul>
                     </div>
@@ -578,7 +578,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Spritz<span class="right">4,5</span></h3>
-                                <p>Campari o Aperol</p>
+                                <p>campari o aperol</p>
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">5</span></h3>
@@ -586,7 +586,7 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></h3>
-                                <p>Hendrick's, Botanist 22, Monkey 47 Sloe, Monkey 47 Dry, Gin de Mare. Acqua tonica con estratti rigorosamente naturali</p>
+                                <p>hendrick's, botanist 22, monkey 47 Sloe, monkey 47 dry, gin de mare. acqua tonica con estratti rigorosamente naturali</p>
                             </li>
                         </ul>
                     </div>
@@ -599,38 +599,38 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Grappa di Lacrima<span class="right">3</span></h3>
-                                <p>Mancinelli</p>
+                                <p>mancinelli</p>
                             </li>
                             <li>
                                 <h3>Grappa Rosso Conero<span class="right">3</span></h3>
-                                <p>Garofali</p>
+                                <p>garofali</p>
                             </li>
                             <li>
                                 <h3>Mistrà, Sibilla, Tonico<span class="right">2</span></h3>
-                                <p>Varnelli</p>
+                                <p>varnelli</p>
                             </li>
                             <li>
                                 <h3>Sambuca<span class="right">2</span></h3>
-                                <p>Molinari</p>
+                                <p>molinari</p>
                             </li>
                             <li>
                                 <h3>Fernet Branca<span class="right">2</span></h3>
                             </li>
                             <li>
                                 <h3>Rhum<span class="right"> 3 | 6</span></h3>
-                                <p>Matusalem 15 Anni</p>
+                                <p>matusalem 15 Anni</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 5 | 10</span></h3>
-                                <p>Dad's Hat Rye Finished in Vermouth Barrels</p>
+                                <h3>Whiskey Rye<span class="right"> 5 | 10</span></h3>
+                                <p>dad's hat</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 4 | 8</span></h3>
-                                <p>Knob Creek Bourbon 9 Years</p>
+                                <h3>Whiskey Bourbon 9 Years<span class="right"> 4 | 8</span></h3>
+                                <p>knob creek</p>
                             </li>
                             <li>
-                                <h3>Whiskey<span class="right"> 3 | 6</span></h3>
-                                <p>Maker's Mark Bourbon</p>
+                                <h3>Whiskey Bourbon<span class="right"> 3 | 6</span></h3>
+                                <p>maker's mark </p>
                             </li>
                         </ul>
                     </div>
