--- a/menu/index.html
+++ b/menu/index.html
@@ -498,11 +498,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Vino della casa: Rosso Piceno<span class="right"> 2,5 | 6</span></h3>
-                                <p>Tavignano</p>
+                                <p>tavignano</p>
                             </li>
                             <li>
                                 <h3>Crimà IGT<span class="right"> 11</span></h3>
-                                <p>Conti di Buscareto</p>
+                                <p>conti di buscareto</p>
                             </li>
                         </ul>
                     </div>
@@ -515,11 +515,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></h3>
-                                <p>Tavignano</p>
+                                <p>tavignano</p>
                             </li>
                             <li>
                                 <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></h3>
-                                <p>Bisci</p>
+                                <p>bisci</p>
                             </li>
                         </ul>
                     </div>
@@ -582,7 +582,7 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">5</span></h3>
-                                <p>Tanquerey</p>
+                                <p>tanquerey</p>
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></h3>
