--- a/menu/index.html
+++ b/menu/index.html
@@ -617,19 +617,19 @@
                                 <h3>Fernet Branca<span class="right">2</span></h3>
                             </li>
                             <li>
-                                <h3>Rhum<span class="right"> 3 | 6</span></h3>
+                                <h3>Rhum<span class="right">5</span></h3>
                                 <p>matusalem 15 Anni</p>
                             </li>
                             <li>
-                                <h3>Whiskey Rye<span class="right"> 5 | 10</span></h3>
+                                <h3>Whisky Rye<span class="right">2cl 4,5 | 4cl 8</span></h3>
                                 <p>dad's hat</p>
                             </li>
                             <li>
-                                <h3>Whiskey Bourbon 9 Years<span class="right"> 4 | 8</span></h3>
+                                <h3>Whisky Bourbon 9 Years<span class="right">2cl 4,5 | 4cl 8</span></h3>
                                 <p>knob creek</p>
                             </li>
                             <li>
-                                <h3>Whiskey Bourbon<span class="right"> 3 | 6</span></h3>
+                                <h3>Whisky Bourbon<span class="right">2cl 2,5 | 4cl 5</span></h3>
                                 <p>maker's mark </p>
                             </li>
                         </ul>
