--- a/menu/index.html
+++ b/menu/index.html
@@ -625,7 +625,7 @@
                                 <p>dad's hat</p>
                             </li>
                             <li>
-                                <h3>Whisky Bourbon 9 Years<span class="right"> 2cl 4,5 | 4cl 8</span></h3>
+                                <h3>Whisky Bourbon<span class="right"> 2cl 4,5 | 4cl 8</span></h3>
                                 <p>knob creek</p>
                             </li>
                             <li>
