--- a/video.html
+++ b/video.html
@@ -40,9 +40,9 @@
 <!-- fine navbar con hamburger -->
     <div class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Abbiamo bevuto troppo <span>:)</span></h1>
-            <p>Se cerchi il video linkato in Facebook, sarà on-line verso il Primo di Maggio &hellip; del 2015. Forse &hellip;</p>
-            <a href="http://beerstrot.it">Torna a casa</a>
+            <div class="flex-video">
+        <iframe width="420" height="315" src=" http://youtu.be/Onqg9hwF4Kk" frameborder="0" allowfullscreen></iframe>
+</div>
         </div>
     </div>
     <!-- inizio footer -->
