--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Pagina non trovata</title>
+    <title>Beerstrot | Video</title>
     <meta name="description" content="Uuupsssss"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
@@ -41,7 +41,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns">
             <div class="flex-video">
-                <iframe width="420" height="315" src=" http://youtu.be/Onqg9hwF4Kk" frameborder="0" allowfullscreen></iframe>
+                <iframe width="420" height="315" src="https://youtu.be/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
