--- a/video/index.html
+++ b/video/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Video</title>
-    <meta name="description" content="Video Istituzionale"/>
+    <meta name="description" content="Uuupsssss"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png"> 
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
-    <link rel="canonical" href="http://beerstrot.it/video/"/>
 </head>
 <body>
 <!-- navbar con hamburger -->
