--- a/video/index.html
+++ b/video/index.html
@@ -10,6 +10,7 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png"> 
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="canonical" href="http://beerstrot.it/video/"/>
 </head>
 <body>
 <!-- navbar con hamburger -->
