--- a/video/index.html
+++ b/video/index.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns">
             <div class="flex-video">
-                <iframe width="420" height="315" src="https://youtu.be/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
