--- a/video/index.html
+++ b/video/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Video</title>
-    <meta name="description" content="Uuupsssss"/>
+    <meta name="description" content="Video Istituzionale"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png"> 
@@ -39,11 +39,34 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-    <div class="row">
+    <header class="row">
         <div class="medium-12 large-12 columns">
+            <h1>Ca' Vecchia Beerstrot</h1>
+            <hr>
+        </div>
+    </header>
+    <div class="row">
+        <div class="medium-8 large-8 columns extra-space">
             <div class="flex-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
             </div>
+        </div>
+        <div class="medium-4 large-4 columns extra-space-aside-video" itemscope itemtype="http://schema.org/Restaurant">
+            <h6>Telefono: 
+                <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
+            </h6>
+            <h6>Email: 
+                <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
+            </h6>
+            <h6>Indirizzo: 
+                <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                <span itemprop="streetAddress">Via Centofinestre, 20</span>
+                <span itemprop="postalCode">60024</span>
+                <span itemprop="addressLocality">Filottrano</span>
+                <span itemprop="addressRegion">AN</span>
+                <span class="hide-for-small" itemprop="addressCountry">Italia</span></a> 
+            </h6>
+            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
         </div>
     </div>
     <!-- inizio footer -->
