--- a/video/index.html
+++ b/video/index.html
@@ -66,7 +66,7 @@
                 <span itemprop="addressRegion">AN</span>
                 <span class="hide-for-small" itemprop="addressCountry">Italia</span></a> 
             </h6>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
+            <span class=""><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
         </div>
     </div>
     <!-- inizio footer -->
