--- a/video/index.html
+++ b/video/index.html
@@ -46,7 +46,7 @@
         </div>
     </header>
     <div class="row">
-        <div class="medium-8 large-8 columns extra-space">
+        <div class="medium-8 large-8 columns">
             <div class="flex-video">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -69,7 +69,7 @@
                 </h6>
                 <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a>
             </span>
-            <span class="show-for-small-only extra-space clearfix">
+            <span class="show-for-small-only clearfix">
                 <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
                 <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
             </span>
