--- a/video/index.html
+++ b/video/index.html
@@ -4,13 +4,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Video</title>
-    <meta name="description" content="Video Istituzionale"/>
+    <title>Beerstrot | Il Gusto in Fermento</title>
+    <meta name="description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Il Gusto in Fermento"/>
+    <meta name="twitter:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <meta name="twitter:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/video/"/>
+    <meta property="og:url" content="http://beerstrot.it/video/"/>
+    <meta property="og:type" content="video.other"/>
+    <meta property="og:title" content="Il Gusto in Fermento"/>
+    <meta property="og:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <meta property="og:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://beerstrot.it/video/"/>
     <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png"> 
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
-    <link rel="canonical" href="http://beerstrot.it/video/"/>
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -41,7 +53,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Ca' Vecchia Beerstrot</h1>
+            <h1>Il Gusto in Fermento</h1>
             <hr>
         </div>
     </header>
