--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
-    <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
+    <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Beerstrot Copyright (c) 2015"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Birra Artigianale e Cibo Divino"/>
-    <meta name="twitter:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
-    <meta name="twitter:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
+    <meta name="twitter:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/background-home.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it"/>
     <meta property="og:url" content="http://beerstrot.it"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
-    <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
+    <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta property="og:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
-    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
+    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
