--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/medium/bancone-e-sedie-dettaglio.jpg" alt="Bancone Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
+                <a role="button" href="<iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>"><img src="http://beerstrot.it/asset/img/medium/video.jpg" alt="Video Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Amiamo la birra artigianale e il buon cibo.</p>
