--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Chi&nbsp;Siamo</title>
+    <title>Beerstrot | Chi Siamo</title>
     <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo. Pub, Birreria o Birstrot? Decidi tu."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
@@ -32,7 +32,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
+                <li class="active"><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -43,7 +43,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Chi&nbsp;Siamo</h1>
+            <h1>Chi Siamo</h1>
             <hr>
         </div>
     </header>
@@ -531,7 +531,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
             </p>
