--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -129,18 +129,18 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Chi&nbsp;Siamo</h1>
+                <h1>Chi Siamo</h1>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="<iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>"><img src="http://beerstrot.it/asset/img/medium/video.jpg" alt="Video Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/video/"><iframe width="470" height="264" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Amiamo la birra artigianale e il buon cibo.</p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi&nbsp;Siamo &rarr;</a>
+                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
             </div>
         </div>
     </div>
@@ -294,7 +294,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
             </p>
