--- a/video/index.html
+++ b/video/index.html
@@ -42,7 +42,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="medium-8 large-8 columns extra-space">
             <div class="flex-video">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="medium-4 large-4 columns extra-space-aside-video" itemscope itemtype="http://schema.org/Restaurant">
@@ -199,7 +199,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
             </p>
