--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <div class="flex-video">
-                    <a role="button" href="http://beerstrot.it/video/"><iframe width="470" height="264" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe></a>
+                    <iframe width="470" height="264" src="https://www.youtube.com/embed/2_gbVco836c?rel=0&theme=light" frameborder="0"></iframe>
                 </div>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
