--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <div class="flex-video">
-                    <iframe width="470" height="264" src="https://www.youtube.com/embed/2_gbVco836c?rel=0&theme=light" frameborder="0"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
                 </div>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
