--- a/video/index.html
+++ b/video/index.html
@@ -60,7 +60,9 @@
     <div class="row">
         <div class="medium-8 large-8 columns extra-space">
             <div class="flex-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
+                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe> -->
+                <iframe src="//fast.wistia.net/embed/iframe/1pwjdeajy2" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1080" height="608"></iframe>
+                <script src="//fast.wistia.net/assets/external/E-v1.js" async></script>
             </div>
         </div>
         <div class="medium-4 large-4 columns extra-space-aside-video" itemscope itemtype="http://schema.org/Restaurant">
