--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <div class="flex-video">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe> -->
-                    <iframe src="//fast.wistia.net/embed/iframe/1pwjdeajy2" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1080" height="608"></iframe>
-                    <script src="//fast.wistia.net/assets/external/E-v1.js" async></script>
+                <div class="flex-video widescreen vimeo">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
+                    <!-- <iframe src="//fast.wistia.net/embed/iframe/1pwjdeajy2" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1080" height="608"></iframe>
+                    <script src="//fast.wistia.net/assets/external/E-v1.js" async></script> -->
+                    <!-- <iframe src="https://player.vimeo.com/video/137006762" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/137006762">Ca&#039; Vecchia Beerstrot</a> from <a href="https://vimeo.com/cavecchiabeerstrot">Ca&#039; Vecchia Beerstrot</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
                 </div>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
