--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <div class="flex-video widescreen vimeo">
+                <div class="flex-video widescreen vimeo extra-space-text-tab-contatti">
                     <a role="button" href="http://beerstrot.it/video/">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
                     </a>
                 </div>
             </div>
