fix video margin

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <div class="flex-video widescreen vimeo extra-space-text-tab-contatti">
+                <div class="flex-video widescreen vimeo extra-space-video">
                     <a role="button" href="http://beerstrot.it/video/">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
                     </a>
