--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <div class="flex-video widescreen vimeo extra-space-video">
                     <a role="button" href="http://beerstrot.it/video/">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2_gbVco836c" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
                     </a>
                 </div>
             </div>
