--- a/video/index.html
+++ b/video/index.html
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="medium-8 large-8 columns extra-space">
             <div class="flex-video widescreen vimeo">
-                <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
             </div>
         </div>
         <div class="medium-4 large-4 columns extra-space-aside-video" itemscope itemtype="http://schema.org/Restaurant">
