--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <div class="flex-video widescreen vimeo extra-space-video">
                     <a role="button" href="http://beerstrot.it/video/">
-                        <iframe width="1280" height="720" src="hhttps://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
+                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
                     </a>
                 </div>
             </div>
