--- a/video/index.html
+++ b/video/index.html
@@ -8,12 +8,14 @@
     <meta name="description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="player">
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Il Gusto in Fermento"/>
     <meta name="twitter:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/video.jpg"/>
+    <meta name="twitter:player" content="http://beerstrot.it/video/">
+    <meta name="twitter:player:stream" content="http://beerstrot.it/video/"/>
     <meta name="twitter:url" content="http://beerstrot.it/video/"/>
+    <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
     <meta property="og:url" content="http://beerstrot.it/video/"/>
     <meta property="og:type" content="video.other"/>
     <meta property="og:title" content="Il Gusto in Fermento"/>
@@ -60,7 +62,8 @@
     <div class="row">
         <div class="medium-8 large-8 columns extra-space">
             <div class="flex-video widescreen vimeo">
-                <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe>
+                <!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?vq=hd1080&modestbranding=1&iv_load_policy=3&rel=0&theme=light" frameborder="0"></iframe> -->
+                <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="medium-4 large-4 columns extra-space-aside-video" itemscope itemtype="http://schema.org/Restaurant">
