--- a/video/index.html
+++ b/video/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="video.other"/>
     <meta property="og:title" content="Il Gusto in Fermento"/>
     <meta property="og:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <!-- <meta property="og:image" content="http://beerstrot.it/asset/img/large/video.jpg"/> -->
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/video.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/video/"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png"> 
