fix twitter card

--- a/video/index.html
+++ b/video/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:title" content="Il Gusto in Fermento"/>
     <meta name="twitter:description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta name="twitter:player" content="http://beerstrot.it/video/">
-    <meta name="twitter:player:stream" content="http://beerstrot.it/video/"/>
+    <meta name="twitter:player:stream" content="https://youtu.be/2_gbVco836c?&autoStart=false"/>
     <meta name="twitter:url" content="http://beerstrot.it/video/"/>
     <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
     <meta property="og:url" content="http://beerstrot.it/video/"/>
