--- a/menu/index.html
+++ b/menu/index.html
@@ -582,7 +582,7 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">5</span></h3>
-                                <p>tanquerey</p>
+                                <p>tanquerey, bombay, beefeater</p>
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></h3>
